Bug 541897 - Turn off one shot on BrowserWindow.nib to stop Flash and Silverlight from logging 'kCGErrorIllegalArgument: CGSGetWindowBounds: NULL window' repeatedly on 10.6 when windows are hidden or minimized. Patch by Stuart Morgan <stuart.morgan@alumni.case.edu>, sr=pink, a/Cm2.0.6=smorgan